# MyPL

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Doxyfile  INSTALL  Makefile.am  Makefile.dist  README.md  configure.ac
include/mypl/: config.h.in
src/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt  errors.c
src/include/common/: attributes.h  errors.h
src/include/lexer/: gperf_keywords.h  token.h
src/include/public/: errors.h
src/include/util/: avl_tree.h  trie_set.h
src/lexer/: CMakeLists.txt  gperf_literals.h  keywords.gperf  literals.txt  token.c  token.h
src/parser/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/lexer/: CMakeLists.txt
src/tests/lexer/token/: CMakeLists.txt  advances_pointer.c  gets_alnum.c  gets_comment.c  gets_keyword_literals.c  gets_keywords.c  gets_number.c  gets_string.c  gets_string_escapes.c  gets_string_large.c  gets_symbol.c  gets_word.c  linebreak.c  merges_operators.c  splits_on_symbol.c  unclosed_string_throws.c
src/tests/util/: CMakeLists.txt
src/tests/util/avl_tree/: CMakeLists.txt  contains.c  not_contains.c
src/tests/util/splay_tree/: CMakeLists.txt  contains.c  not_contains.c
src/tests/util/trie_set/: CMakeLists.txt  common.h  contains.c  not_contains.c
src/util/: CMakeLists.txt  avl_tree.c  avl_tree.h  splay_tree.c  splay_tree.h  trie_set.c  trie_set.h
tests/: Makefile.am  avl_tree.c  splay_tree.c  token.c  trie_set.c
