AC_INIT([My Programming Language], 0.0, [gui.g.brandt@gmail.com])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects -Wall])
AM_PROG_AR
AC_PROG_CC
AC_CONFIG_FILES(Makefile tests/Makefile)
AC_REQUIRE_AUX_FILE([tap-driver.sh])
LT_INIT
AC_PROG_AWK
AC_OUTPUT